--- a/ciokorea_20190712.md
+++ b/ciokorea_20190712.md
@@ -1,2 +1,7 @@
 '1만 대 서버 관리는 머신러닝에 맡겼다' 한 데이터센터 기업 사례
 ==========================================================
+* 구글
+> 딥마인드(DeepMind) 기술을 이용해 거대한 서버 팜(Server Farm)에서 전력 소비량을 관리하여 필요한 전력량을 40% 절감
+* 아마데우스 IT그룹
+> IBM 왓슨(Watson) 인공지능 플랫폼을 이용하여 운영 파라미터 작업, 사고 예측, 신속한 기저 원인 파악에 활용
+> 수동 데이터센터 운영의 필요성 감소로 인해 IT 운영 인력의 역할이 자동화 엔지니어로 바뀔 것
