--- a/ciokorea_20190712.md
+++ b/ciokorea_20190712.md
@@ -1,5 +1,11 @@
 '1만 대 서버 관리는 머신러닝에 맡겼다' 한 데이터센터 기업 사례
 ==========================================================
+현상
+----
+> 데이터센터 규모가 커지면 문제가 생겼을 때 이를 관리자에게 자동으로 알려주고 대응하게 하는 체계로는 한계가 있다.
+> 아래 사례에서는 머신러닝에서 이러한 한계를 극복할 수 있는 해답을 찾았다.
+사례
+----
 * 구글
 > 딥마인드(DeepMind) 기술을 이용해 거대한 서버 팜(Server Farm)에서 전력 소비량을 관리하여 필요한 전력량을 40% 절감
 * 아마데우스 IT그룹
