기업 사례 추가

--- a/ciokorea_20190712.md
+++ b/ciokorea_20190712.md
@@ -1,5 +1,8 @@
 '1만 대 서버 관리는 머신러닝에 맡겼다' 한 데이터센터 기업 사례
 ==========================================================
+출처
+----
+* ciokorea 2019.07.12. 기사
 현상
 ----
 > 데이터센터 규모가 커지면 문제가 생겼을 때 이를 관리자에게 자동으로 알려주고 대응하게 하는 체계로는 한계가 있다.
