--- a/IDC_201709.md
+++ b/IDC_201709.md
@@ -1,2 +1,20 @@
 인공지능에 필요한 서버 인프라에 직면하게 되는 난관
 ==============================================
+출처
+----
+* IDC 백서(2017년 9월)
+
+IT 자동화 관련 내용
+------------------
+* AI 적용 유형
+  1. 사내에서 개발해야 하는가?
+  2. 기성품을 구매해야 하는가?
+  3. 제3의 패키지 업체와 협력해야 하는가?
+  4. 클라우드 솔루션을 찾아야 하는가?
+* 사내에서 AI 애플리케이션을 개발할 때의 이점은 클라우드 솔루션과 달리 비즈니스 요구에 정교하게 맞출 수 있다는 것이다.
+* AI 적용시 고려사항
+  1. 효과적인 AI 솔루션을 위한 올바른 데이터 보유 여부
+  2. 리소스 및 노동 집약적인 데이터 정리
+  3. 라벨링 및 전송을 포함한 데이터 준비
+  4. AI 애플리케이션에 입력되는 엄청난 양의 데이터 관리 능력
+  5. 민감 데이터 관리 능력
