--- a/IDC_201709.md
+++ b/IDC_201709.md
@@ -18,3 +18,18 @@ IT 자동화 관련 내용
   3. 라벨링 및 전송을 포함한 데이터 준비
   4. AI 애플리케이션에 입력되는 엄청난 양의 데이터 관리 능력
   5. 민감 데이터 관리 능력
+* AI 애플리케이션 다양성 사례
+  - Alerter는 시스템과 관련된 문제를 식별하는 머신러닝 앱, Responder는 사람의 개입 없이 이러한 문제를 자동으로 해결
+* AI 앱과의 인프라 한계(빈도 순)
+AI 앱과의 사내 인프라 한계  |  AI 앱과의 클라우드 인프라 한계
+---  |  ---
+관리 어려움  |  확장 어려움
+확장 어려움  |  성능 한계
+성능 한계  |  스토리지 부족
+SLA 내에서 작업을 완료할 수 없음  |  관리 어려움
+스토리지 부족  |  문제 진단 어려움
+문제 진단 어려움  |  로드 균형 어려움
+서버 가상화 어려움  |  SLA 내에서 작업을 완료할 수 없음
+데이터센터의 상호 운용성 결핍  |  높은 전력 사용
+높은 전력 사용  |  데이터센터의 상호 운용성 결핍
+메모리 한계  |  서버 가상화 어려움
