--- a/IDC_201709.md
+++ b/IDC_201709.md
@@ -34,3 +34,15 @@ SLA 내에서 작업을 완료할 수 없음  |  관리 어려움
 데이터센터의 상호 운용성 결핍  |  높은 전력 사용
 높은 전력 사용  |  데이터센터의 상호 운용성 결핍
 메모리 한계  |  서버 가상화 어려움
+
+* 소규모에서 중간 규모의 AI 전략
+> 소규모에서 중간 규모의 AI전략을 위해서는 솔루션을 사내에서 개발할 것을 권장.
+> 협업 실험을 통해 개발자, 영업부문, 데이터 분석가 또는 데이터 과학자(이용가능 시),
+> 인프라 팀은 비즈니스를 위한 맞춤형 솔루션을 개발하는 동안에 중요한 새로운 기술 세트를 얻을 수 있습니다.
+> IDC는 소규모로 사내에서 시작할 것을 권장.
+* 대규모 AI 전략
+> 보다 큰 AI 전략은 외부 지원을 통해 이점을 얻을 수 있습니다. 조직에 중요한 비즈니스 혁신을 가져오기 위한
+> 포괄적인 AI 솔루션을 개발하는 시간, 비용 및 복잡성이 너무 크기 때문에 상당한 리소스를 가지고 있는
+> 큰 조직을 제외하고는 사내 실험 및 오류 접근 방식을 선택하지 못할 수 도 있습니다.
+> 제3자 AI솔루션 제공업체들은 VAR 또는 시스템 통합업체처럼 솔루션을 신속하게 구현하는 데 도움이 될 수 있지만,
+> 독특한 비즈니스 요구를 위한 유연성과 맞춤성이 떨어질 것입니다.
