--- a/LG_CNS_20150528.md
+++ b/LG_CNS_20150528.md
@@ -1,2 +1,3 @@
 IT 인프라 장애, 빅데이터 분석으로 미리 예측할 수 있다
 =================================================
+![ITOA 구성도](https://github.com/bulgemi/ITOA/blob/master/ITOA_arch.PNG)
