--- a/LG_CNS_20150528.md
+++ b/LG_CNS_20150528.md
@@ -1,3 +1,9 @@
 IT 인프라 장애, 빅데이터 분석으로 미리 예측할 수 있다
 =================================================
+출처
+----
+* LG CNS official blog (2015년 5월 28일)
+
+IT인프라, 빅데이와 만나다
+-----------------------
 ![ITOA 구성도](https://github.com/bulgemi/ITOA/blob/master/ITOA_arch.PNG)
