--- a/LG_CNS_20150528.md
+++ b/LG_CNS_20150528.md
@@ -4,6 +4,18 @@ IT 인프라 장애, 빅데이터 분석으로 미리 예측할 수 있다
 ----
 * LG CNS official blog (2015년 5월 28일)
 
-IT인프라, 빅데이와 만나다
+IT인프라, 빅데이터와 만나다
 -----------------------
 ![ITOA 구성도](https://github.com/bulgemi/ITOA/blob/master/ITOA_arch.PNG)
+1. 인프라 성능 지표 데이터를 기반으로 패턴분석
+2. 앞으로 나타날 인프라 성능지표의 값과 패턴을 예측
+3. 선감지 경보를 울려서 장애 발생 전에 예방 조치
+
+ITOA의 핵심, 예측과 패턴이다
+--------------------------
+* 빅데이터를 활용한 시계열 분석과 머신러닝 기법 적용
+1. 인프라 성능지표에 대한 예측값 생성
+> 인프라 성능지표 예측의 경우, 시계열 분석을 통해 특정 시간에서의 성능지표 값을 미리 알아낼 수 있다.
+2. 성능지표에 대한 이상패턴 유무를 분석
+> 성능지표의 이상패턴 탐지란, 과거 정상일 때의 성능지표 패턴을 학습하여 앞으로 보여지는 성능지표 패턴이
+> 정상 패턴인지 장애 관련 패턴인지를 분석하는 것 
